--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,150 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    >
+    <meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
+
   <body>
     <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
   </body>
+  <form
+   action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+   method="get"
+   class="form"
+   autocomplete="off"
+  >
+    <fieldset class="block">
+      <legend>Personal information</legend>
+      <label class="form-field">
+        Surname:
+        <input
+          type="text"
+          name="surname"
+          required
+        >
+      </label>
+      <label class="form-field">
+        Name:
+        <input
+          type="text"
+          name="name"
+          required
+        >
+      </label>
+      <label class="form-field">
+        How old are You?
+        <input
+          type="number"
+          name="age"
+          value="12"
+          min="1"
+          max="100"
+          required
+        >
+      </label>
+      <label class="form-field">
+        Full date of birth:
+        <input
+          type="date"
+          name="date"
+          required
+        >
+      </label>
+      <label class="form-field">
+        I accept the term of agreement
+        <input
+          type="checkbox"
+          name="term"
+          required
+        >
+      </label>
+    </fieldset>
+    <fieldset class="block">
+      <legend>Registration</legend>
+      <label class="form-field">
+        E-mail:
+        <input
+          type="email"
+          name="email"
+          placeholder="email@example.com"
+          required
+        >
+      </label>
+      <label class="form-field">
+        Password:
+        <input
+          type="password"
+          name="password"
+          minlength="5"
+          maxlength="32"
+          required
+        >
+      </label>
+    </fieldset>
+    <fieldset class="block">
+      <legend>An interesting fact about you!</legend>
+      <label class="form-field">
+        Do you love cats?
+        <input
+          type="radio"
+          name="cat"
+          value="yes"
+        >
+        Yes
+        <input
+          type="radio"
+          name="cat"
+          value="no"
+        >
+        No
+      </label>
+      <label class="form-field">
+        What is your favorite color?
+        <input type="color" name="color">
+      </label>
+      <label class="form-field">
+        What time do you go to bed?
+        <input type="time" name="time">
+      </label>
+      <label class="form-field">
+        What are your favorite brand of cars?
+        <select name="car-select" multiple>
+          <option value="bmw">BMW</option>
+          <option value="audi">Audi</option>
+          <option value="lada">Lada</option>
+        </select>
+      </label>
+      <label class="form-field">
+        How do you rate our work?
+        <input type="range">
+      </label>
+    </fieldset>
+    <fieldset class="block">
+      <legend>Additional info:</legend>
+      <label class="form-field">
+        Comments:
+        <textarea name="comments"></textarea>
+      </label>
+      <label class="form-field">
+        Would you recommend us?
+        <select
+          name="recomendation"
+          size="1"
+          multiple
+        >
+          <option value="yes">Yes</option>
+          <option value="no">No</option>
+        </select>
+      </label>
+    </fieldset>
+    <button type="submit" class="button">Submit</button>
+  </form>
+
 </html>
