Form is created

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
         </select>
       </label>
     </fieldset>
-    <button type="submit" class="button">Submit</button>
+    <button type="submit">Submit</button>
   </form>
 
 </html>
