--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
 
     <form
@@ -62,7 +61,7 @@
         </label>
 
         <label class="form-field">
-          I accept the term of agreement
+          I accept the term of the agreement
           <input
             type="checkbox"
             name="term"
@@ -106,14 +105,14 @@
             name="cat"
             value="yes"
           >
-          Yes
+          yes
 
           <input
             type="radio"
             name="cat"
             value="no"
           >
-          No
+          no
         </label>
 
         <label class="form-field">
@@ -148,7 +147,7 @@
 
         <label class="form-field">
           Comments:
-          <textarea name="comments"></textarea>
+          <textarea name="comments" class="textarea"></textarea>
         </label>
 
         <label class="form-field">
@@ -157,10 +156,11 @@
             name="recomendation"
             size="1"
             multiple
+            class="recomendation"
           >
-            <option value="yes">Yes</option>
+            <option value="yes">yes</option>
 
-            <option value="no">No</option>
+            <option value="no">no</option>
           </select>
         </label>
       </fieldset>
